...
    return _nwTableView;
}

- (UITextField *)passwordTextField {
    if (!_passwordTextField) {
        _passwordTextField = [[UITextField alloc] init];
        _passwordTextField.placeholder = @"please input some charc";
        _passwordTextField.backgroundColor = UIColor.greenColor;
        
    }
    return _passwordTextField;
}

...
